--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
   test:
@@ -14,9 +14,8 @@ jobs:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_PASSWORD: schoolbot123
-          POSTGRES_USER: schoolbot
-          POSTGRES_DB: schoolbot
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -35,64 +34,134 @@ jobs:
         ports:
           - 6379:6379
 
-    env:
-      # Telegram Bot (тестовый токен)
-      TELEGRAM_TOKEN: "1234567890:TEST_TOKEN_FOR_CI_CD_PURPOSES_ONLY"
-      
-      # Database
-      DB_NAME: schoolbot
-      DB_USER: schoolbot
-      DB_PASS: schoolbot123
-      DB_HOST: localhost
-      DB_PORT: 5432
-      
-      # Redis
-      REDIS_DSN: redis://localhost:6379/0
-      
-      # Environment
-      ENV: test
-      
-      # Admin IDs (тестовые)
-      ADMIN_IDS: "123456789,987654321"
-      
-      # App settings
-      KEEP_DAYS: 14
-
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
-    - name: Set up Python 3.11
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+    
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install ruff black pytest pytest-asyncio pytest-cov
     
-    - name: Wait for services
+    - name: Set up environment variables
       run: |
-        echo "Waiting for PostgreSQL..."
-        timeout 30s bash -c 'until pg_isready -h localhost -p 5432; do sleep 1; done'
-        echo "Waiting for Redis..."
-        timeout 30s bash -c 'until redis-cli -h localhost ping; do sleep 1; done'
+        echo "TELEGRAM_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz" >> $GITHUB_ENV
+        echo "DB_NAME=test_db" >> $GITHUB_ENV
+        echo "DB_USER=postgres" >> $GITHUB_ENV
+        echo "DB_PASS=postgres" >> $GITHUB_ENV
+        echo "DB_HOST=localhost" >> $GITHUB_ENV
+        echo "DB_PORT=5432" >> $GITHUB_ENV
+        echo "REDIS_DSN=redis://localhost:6379/0" >> $GITHUB_ENV
+        echo "ADMIN_IDS=123456789" >> $GITHUB_ENV
+        echo "ENV=test" >> $GITHUB_ENV
+        echo "KEEP_DAYS=14" >> $GITHUB_ENV
     
-    - name: Run database migrations
+    - name: Run linting with Ruff
       run: |
-        python manage.py migrate
-      env:
-        DB_HOST: localhost
-        DB_PORT: 5432
+        ruff check app/ tests/
+        ruff format --check app/ tests/
     
-    - name: Lint with ruff
-      run: ruff check .
+    - name: Run type checking with mypy
+      run: |
+        mypy app/ --ignore-missing-imports
     
-    - name: Run tests
-      run: pytest -q --tb=short
-      env:
-        DB_HOST: localhost
-        DB_PORT: 5432
+    - name: Run security tests
+      run: |
+        pytest tests/test_security.py -v --cov=app --cov-report=term-missing
     
-    - name: Build Docker image
-      run: docker build -t school-bot . 
+    - name: Run configuration security tests
+      run: |
+        pytest tests/test_config_security.py -v --cov=app --cov-report=term-missing
+    
+    - name: Run XSS protection tests
+      run: |
+        pytest tests/test_xss_protection.py -v --cov=app --cov-report=term-missing
+    
+    - name: Run error handling tests
+      run: |
+        pytest tests/test_error_handling.py -v --cov=app --cov-report=term-missing
+    
+    - name: Run all tests
+      run: |
+        pytest tests/ -v --cov=app --cov-report=term-missing --cov-report=xml
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: false
+
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Run Bandit security scan
+      run: |
+        pip install bandit
+        bandit -r app/ -f json -o bandit-report.json || true
+    
+    - name: Upload security scan results
+      uses: actions/upload-artifact@v3
+      with:
+        name: security-scan-results
+        path: bandit-report.json
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: |
+          ghcr.io/${{ github.repository }}:latest
+          ghcr.io/${{ github.repository }}:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test, docker-build]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment: production
+    
+    steps:
+    - name: Deploy to production
+      run: |
+        echo "Deploying to production..."
+        # Здесь можно добавить команды для деплоя
+        # Например, обновление Docker Compose на сервере 
