🚀 Временное отключение демо-данных для быстрого запуска present-bot

--- a/env.example
+++ b/env.example
@@ -6,17 +6,17 @@ TELEGRAM_TOKEN=your_telegram_token_here
 # Настройки подключения к PostgreSQL
 DB_NAME=schoolbot
 DB_USER=schoolbot
-DB_PASS=secure_password_change_me
-DB_HOST=localhost
+DB_PASS=schoolbot
+DB_HOST=postgres
 DB_PORT=5432
 
 # Redis Configuration
 # URL для подключения к Redis
-REDIS_DSN=redis://localhost:6379/0
+REDIS_DSN=redis://redis:6379/0
 
 # Environment
 # prod, staging, dev
-ENV=dev
+ENV=prod
 
 # Admin Telegram IDs
 # Список ID администраторов через запятую
