feat: добавлена SQL-инфраструктура для стабильного деплоя
✅ Основные изменения:
- sql/01_init_schema.sql: полная схема PostgreSQL с таблицами, индексами, триггерами
- sql/02_demo_data.sql: демо-пользователи всех ролей + тестовые данные
- scripts/init_db.sh: скрипт автоинициализации БД для Docker
- DATABASE_SETUP.md: полная документация по настройке БД

🔧 Интеграция:
- docker-compose.yml: монтирование ./sql в контейнер
- scripts/run_migrations.sh: интеграция SQL-инициализации перед Alembic
- .env.test: конфигурация для тестовой среды

🎯 Результат:
Теперь бот не будет падать при деплое - БД создастся автоматически со всей нужной структурой

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     volumes:
       - ./app:/app/app
       - ./scripts:/app/scripts
+      - ./sql:/app/sql
       - ./migrations:/app/migrations
       - ./alembic.ini:/app/alembic.ini
     networks:
